syntax = "proto3";

package common;


import "common/common_data.proto";

enum IdeaStatusEnum {
    IDEA_STATUS_OPENED = 0;
    IDEA_STATUS_CLOSED = 1;
}

enum IdeaDirectionTypeEnum {
    SHORT = 0;
    LONG = 1;
}

message FetchedIdea {
    float openPrice = 1;
    string ideaId = 2;
    int32 leverage = 3;
    float closePrice = 4;
    string symbol = 5;
    string traderId = 6;
    FetchDataSource source = 7;
    IdeaStatusEnum status = 8;
    DataMarketEnum market = 9;
    IdeaDirectionTypeEnum direction = 10;
    float traderWinrate = 11;
}

message FetchedIdeasTransaction {
    repeated FetchedIdea fetchedIdeas = 1;
    bool firstSending = 2;
}