syntax = "proto3";

package service;

import "common/idea.proto";
import "common/empty.proto";


service NotificationSender {
  rpc GetIdeas (common.FetchedIdeasTransaction) returns (common.Empty);
}
